--- a/privacy.html
+++ b/privacy.html
@@ -1,128 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
+    />
 
-  <!-- MAIN TITLE -->
-  <title>Privacy Policy • R7 Hub | Hashtag Ramzan – Free Instagram Hashtag Generator</title>
+    <!-- MAIN TITLE -->
+    <title>
+      Privacy Policy • R7 Hub | Hashtag Ramzan – Free Instagram Hashtag Generator
+    </title>
 
-  <!-- MAIN SEO -->
-  <meta name="description" content="Read the Privacy Policy of R7 Hub • Hashtag Ramzan and understand how your data is handled when you use our free Instagram hashtag generator for reels, posts and shorts. We respect your privacy and keep the experience simple, safe and ad-free.">
-  <meta name="keywords" content="privacy policy, R7 Hub privacy, hashtag ramzan privacy, data policy, instagram hashtag tool privacy" />
-  <meta name="author" content="Ramzan Ahmad" />
+    <!-- MAIN SEO -->
+    <meta
+      name="description"
+      content="Read the Privacy Policy of R7 Hub • Hashtag Ramzan and understand how your data is handled when you use our free Instagram hashtag generator for reels, posts and shorts. We respect your privacy and keep the experience simple, safe and ad-free."
+    />
+    <meta
+      name="keywords"
+      content="privacy policy, R7 Hub privacy, hashtag ramzan privacy, data policy, instagram hashtag tool privacy"
+    />
+    <meta name="author" content="Ramzan Ahmad" />
 
-  <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Privacy Policy • R7 Hub | Hashtag Ramzan" />
-  <meta property="og:description" content="Privacy policy for the free Instagram hashtag generator by R7 Hub • Hashtag Ramzan." />
-  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/privacy.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+    <!-- OPEN GRAPH -->
+    <meta
+      property="og:title"
+      content="Privacy Policy • R7 Hub | Hashtag Ramzan"
+    />
+    <meta
+      property="og:description"
+      content="Privacy policy for the free Instagram hashtag generator by R7 Hub • Hashtag Ramzan."
+    />
+    <meta
+      property="og:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://hashtagss.netlify.app/privacy.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
 
-  <!-- TWITTER CARD -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Privacy Policy • R7 Hub | Hashtag Ramzan" />
-  <meta name="twitter:description" content="Privacy information for users of the R7 Hub free hashtag generator." />
-  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Privacy Policy • R7 Hub | Hashtag Ramzan"
+    />
+    <meta
+      name="twitter:description"
+      content="Privacy information for users of the R7 Hub free hashtag generator."
+    />
+    <meta
+      name="twitter:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/privacy.html" />
+    <!-- CANONICAL URL -->
+    <link rel="canonical" href="https://hashtagss.netlify.app/privacy.html" />
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            ramzan: "#22c55e",
-            r7dark: "#020617",
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              ramzan: "#22c55e",
+              r7dark: "#020617",
+            },
           },
         },
-      },
-    };
-  </script>
-</head>
+      };
+    </script>
+  </head>
 
   <body class="bg-r7dark text-slate-100">
-   
-
-     <!-- NAVBAR (COMMON) -->
-<header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-    <!-- Left: Logo + text -->
-       <!-- Left: Logo + text -->
-<a href="https://instagram.com/ramzan0043" target="_blank" 
-   class="flex items-center gap-3">
-
-  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-    R7
-  </div>
-
-  <div>
-    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
-  </div>
-
-</a>
-
-
-   <!-- Desktop nav -->
-<nav class="hidden md:flex items-center gap-4 text-[13px]">
-  <a href="index.html" class="hover:text-ramzan transition">Home</a>
-  <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
-  <a href="index.html#all" class="hover:text-ramzan transition">Hashtag Box</a>
-  <a href="about.html" class="hover:text-ramzan transition">About</a>
-  <a href="contact.html" class="hover:text-ramzan transition">Contact</a>
-  <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
-  <a href="privacy.html" class="hover:text-ramzan transition">Privacy</a>
-  <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
-  <a href="disclaimer.html" class="hover:text-ramzan transition">Disclaimer</a>
-  <a href="sitemap.html" class="hover:text-ramzan transition">Sitemap</a>
-</nav>
-
-
-    <!-- Mobile menu button -->
-    <button
-      id="menuToggle"
-      class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
-      aria-label="Menu"
+    <!-- NAVBAR (COMMON) -->
+    <header
+      class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur"
     >
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round"
-              d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button>
-  </div>
+      <div
+        class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4"
+      >
+        <!-- Left: Logo + text -->
+        <a
+          href="https://instagram.com/ramzan0043"
+          target="_blank"
+          class="flex items-center gap-3"
+        >
+          <div
+            class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold"
+          >
+            R7
+          </div>
 
-  <!-- Mobile nav dropdown -->
-  <div
-    id="mobileMenu"
-    class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
-  >
-    <div class="flex flex-col gap-2">
-      <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
-      <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
-      <a href="about.html" class="py-1 text-slate-200">👤 About</a>
-      <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+          <div>
+            <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+          </div>
+        </a>
 
-      <div class="h-px bg-slate-800 my-1"></div>
-      <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
-      <a href="privacy.html" class="py-1 text-slate-300">🛡 Privacy Policy</a>
-      <a href="terms.html" class="py-1 text-slate-300">📜 Terms & Conditions</a>
-      <a href="disclaimer.html" class="py-1 text-slate-300">⚠ Disclaimer</a>
-      <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
-    </div>
-  </div>
-</header>
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex items-center gap-4 text-[13px]">
+          <a href="index.html" class="hover:text-ramzan transition">Home</a>
+          <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
+          <a href="index.html#all" class="hover:text-ramzan transition">
+            Hashtag Box
+          </a>
+          <a href="about.html" class="hover:text-ramzan transition">About</a>
+          <a href="contact.html" class="hover:text-ramzan transition">
+            Contact
+          </a>
+          <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
+          <a href="privacy.html" class="hover:text-ramzan transition">
+            Privacy
+          </a>
+          <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
+          <a href="disclaimer.html" class="hover:text-ramzan transition">
+            Disclaimer
+          </a>
+          <a href="sitemap.html" class="hover:text-ramzan transition">
+            Sitemap
+          </a>
+        </nav>
+
+        <!-- Mobile menu button -->
+        <button
+          id="menuToggle"
+          class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
+          aria-label="Menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile nav dropdown -->
+      <div
+        id="mobileMenu"
+        class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
+      >
+        <div class="flex flex-col gap-2">
+          <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
+          <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
+          <a href="index.html#all" class="py-1 text-slate-200">
+            #️⃣ Hashtag Box
+          </a>
+          <a href="about.html" class="py-1 text-slate-200">👤 About</a>
+          <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+
+          <div class="h-px bg-slate-800 my-1"></div>
+          <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
+          <a href="privacy.html" class="py-1 text-slate-300">
+            🛡 Privacy Policy
+          </a>
+          <a href="terms.html" class="py-1 text-slate-300">
+            📜 Terms &amp; Conditions
+          </a>
+          <a href="disclaimer.html" class="py-1 text-slate-300">
+            ⚠ Disclaimer
+          </a>
+          <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
+        </div>
+      </div>
+    </header>
 
     <!-- MAIN -->
-    <main class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8">
+    <main
+      class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8"
+    >
       <header class="space-y-2 border-b border-slate-800 pb-4">
         <p class="text-[11px] text-ramzan uppercase tracking-[0.25em]">
           Privacy Policy
@@ -131,7 +194,8 @@
           R7 Hub – Privacy Policy (simple language)
         </h1>
         <p class="text-slate-400 text-[11px]">
-          Last updated: November 2025 • This is a basic privacy policy for my personal project website.
+          Last updated: November 2025 • This is a basic privacy policy for my
+          personal project website.
         </p>
       </header>
 
@@ -139,8 +203,12 @@
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">1. Who is behind this website?</h2>
           <p class="text-slate-300">
-            Ye website <span class="text-ramzan font-semibold">Ramzan Ahmad (THE R7)</span> ne banayi hai.
-            Ye personal project / learning website hai – koi big company nahi.
+            Ye website
+            <span class="text-ramzan font-semibold">
+              Ramzan Ahmad (THE R7)
+            </span>
+            ne banayi hai. Ye personal project / learning website hai – koi big
+            company nahi.
           </p>
         </div>
 
@@ -150,14 +218,25 @@
             Normally, main personally koi data collect nahi karta. Lekin:
           </p>
           <ul class="list-disc pl-4 text-slate-300 space-y-1">
-            <li>Hosting provider (Netlify, etc.) basic logs store kar sakta hai (IP, browser type, etc.).</li>
-            <li>Agar future me contact form ya email subscription add hota hai, to jo info tum doge woh store ho sakta hai (name, email, message).</li>
-            <li>Agar Google Analytics / AdSense add hua to woh apna normal tracking use karega.</li>
+            <li>
+              Hosting provider (Netlify, etc.) basic logs store kar sakta hai
+              (IP, browser type, etc.).
+            </li>
+            <li>
+              Agar future me contact form ya email subscription add hota hai, to
+              jo info tum doge woh store ho sakta hai (name, email, message).
+            </li>
+            <li>
+              Agar Google Analytics / AdSense add hua to woh apna normal
+              tracking use karega.
+            </li>
           </ul>
         </div>
 
         <div class="space-y-2">
-          <h2 class="text-lg font-semibold">3. Cookies & third-party services</h2>
+          <h2 class="text-lg font-semibold">
+            3. Cookies &amp; third-party services
+          </h2>
           <p class="text-slate-300">
             Abhi ye site bohot simple hai, lekin future me:
           </p>
@@ -166,17 +245,19 @@
             <li>Analytics tools anonymous usage data collect kar sakte hain.</li>
           </ul>
           <p class="text-slate-400 text-[11px]">
-            Note: Agar AdSense ya tracking add hota hai to main is page ko update karunga.
+            Note: Agar AdSense ya tracking add hota hai to main is page ko
+            update karunga.
           </p>
         </div>
 
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">4. How is your data used?</h2>
-          <p class="text-slate-300">
-            Agar koi data collect hota hai, to sirf in cheezon ke liye:
-          </p>
+          <p class="text-slate-300">Agar koi data collect hota hai, to sirf:</p>
           <ul class="list-disc pl-4 text-slate-300 space-y-1">
-            <li>Website improve karne ke liye (kon sa page kaam kar raha hai, kon sa nahi).</li>
+            <li>
+              Website improve karne ke liye (kon sa page kaam kar raha hai, kon
+              sa nahi).
+            </li>
             <li>Spam / abuse rokne ke liye.</li>
             <li>Ads dikhane ke liye (jab AdSense add hoga).</li>
           </ul>
@@ -185,17 +266,15 @@
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">5. Data shared with others?</h2>
           <p class="text-slate-300">
-            Main personally tumhara data bechne ya share karne wala kaam nahi karta.
-            Lekin third-party services (Google, hosting, analytics) apni policies ke
-            according data use kar sakte hain.
+            Main personally tumhara data bechne ya random logon se share karne
+            wala kaam nahi karta. Lekin third-party services (Google, hosting,
+            analytics) apni policies ke according data use kar sakte hain.
           </p>
         </div>
 
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">6. Your choices</h2>
-          <p class="text-slate-300">
-            Tum hamesha:
-          </p>
+          <p class="text-slate-300">Tum hamesha:</p>
           <ul class="list-disc pl-4 text-slate-300 space-y-1">
             <li>Website sirf read kar sakte ho, koi form fill na karo.</li>
             <li>Browser ke through cookies block / clear kar sakte ho.</li>
@@ -203,13 +282,18 @@
         </div>
 
         <div class="space-y-2">
-          <h2 class="text-lg font-semibold">7. Contact regarding privacy</h2>
+          <h2 class="text-lg font-semibold">
+            7. Contact regarding privacy
+          </h2>
           <p class="text-slate-300">
-            Agar tumhe is policy ke baare me koi doubt hai, ya koi data related request hai,
-            to mujhe email kar sakte ho:
+            Agar tumhe is policy ke baare me koi doubt hai, ya koi data related
+            request hai, to mujhe email kar sakte ho:
           </p>
           <p class="text-ramzan text-sm">
-            Email: <a href="mailto:ramzaan0043@gmail.com" class="underline">ramzaan0043@gmail.com</a>
+            Email:
+            <a href="mailto:ramzaan0043@gmail.com" class="underline">
+              ramzaan0043@gmail.com
+            </a>
           </p>
         </div>
       </section>
@@ -217,37 +301,37 @@
 
     <!-- FOOTER -->
     <footer class="border-t border-slate-800 py-4 mt-6">
-  <div class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2">
-    <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
-    <p class="space-x-2">
-      <a href="index.html" class="text-ramzan">Home</a> •
-      <a href="blog.html" class="text-ramzan">Blog</a> •
-      <a href="about.html" class="text-ramzan">About</a> •
-      <a href="privacy.html" class="text-ramzan">Privacy</a> •
-      <a href="terms.html" class="text-ramzan">Terms</a> •
-      <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
-      <a href="sitemap.html" class="text-ramzan">Sitemap</a>
-    </p>
-  </div>
-</footer>
+      <div
+        class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2"
+      >
+        <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
+        <p class="space-x-2">
+          <a href="index.html" class="text-ramzan">Home</a> •
+          <a href="blog.html" class="text-ramzan">Blog</a> •
+          <a href="about.html" class="text-ramzan">About</a> •
+          <a href="privacy.html" class="text-ramzan">Privacy</a> •
+          <a href="terms.html" class="text-ramzan">Terms</a> •
+          <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
+          <a href="sitemap.html" class="text-ramzan">Sitemap</a>
+        </p>
+      </div>
+    </footer>
 
     <script>
-  // Mobile menu toggle (COMMON)
-  const menuToggle = document.getElementById("menuToggle");
-  const mobileMenu = document.getElementById("mobileMenu");
-  if (menuToggle && mobileMenu) {
-    menuToggle.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-  }
+      // Mobile menu toggle (COMMON)
+      const menuToggle = document.getElementById("menuToggle");
+      const mobileMenu = document.getElementById("mobileMenu");
+      if (menuToggle && mobileMenu) {
+        menuToggle.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
+      }
 
-  // Year (agar span id="year" use kar rahe ho to)
-  const yearSpan = document.getElementById("year");
-  if (yearSpan) {
-    yearSpan.textContent = new Date().getFullYear();
-  }
-</script>
-
+      // Year
+      const yearSpan = document.getElementById("year");
+      if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+      }
+    </script>
   </body>
 </html>
-
