--- a/terms.html
+++ b/terms.html
@@ -1,144 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
+    />
 
-  <!-- MAIN TITLE -->
-  <title>Terms & Conditions • R7 Hub | Free Instagram Hashtag Generator India</title>
+    <!-- MAIN TITLE -->
+    <title>
+      Terms &amp; Conditions • R7 Hub | Free Instagram Hashtag Generator India
+    </title>
 
-  <!-- MAIN SEO -->
-  <meta name="description" content="Read the Terms and Conditions for using R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator for reels, posts, shorts and stories. Learn about acceptable use, limitations and legal information for Indian creators using this tool.">
-  <meta name="keywords" content="terms and conditions, R7 Hub terms, hashtag ramzan terms, legal information, instagram hashtag tool terms" />
-  <meta name="author" content="Ramzan Ahmad" />
+    <!-- MAIN SEO -->
+    <meta
+      name="description"
+      content="Read the Terms and Conditions for using R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator for reels, posts, shorts and stories. Learn about acceptable use, limitations and legal information for Indian creators using this tool."
+    />
+    <meta
+      name="keywords"
+      content="terms and conditions, R7 Hub terms, hashtag ramzan terms, legal information, instagram hashtag tool terms"
+    />
+    <meta name="author" content="Ramzan Ahmad" />
 
-  <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Terms & Conditions • R7 Hub | Hashtag Ramzan" />
-  <meta property="og:description" content="Terms and conditions for using the R7 Hub free Instagram hashtag generator." />
-  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/terms.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+    <!-- OPEN GRAPH -->
+    <meta
+      property="og:title"
+      content="Terms &amp; Conditions • R7 Hub | Hashtag Ramzan"
+    />
+    <meta
+      property="og:description"
+      content="Terms and conditions for using the R7 Hub free Instagram hashtag generator."
+    />
+    <meta
+      property="og:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://hashtagss.netlify.app/terms.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
 
-  <!-- TWITTER CARD -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Terms & Conditions • R7 Hub | Hashtag Ramzan" />
-  <meta name="twitter:description" content="Terms for users of the R7 Hub • Hashtag Ramzan hashtag generator tool." />
-  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Terms &amp; Conditions • R7 Hub | Hashtag Ramzan"
+    />
+    <meta
+      name="twitter:description"
+      content="Terms for users of the R7 Hub • Hashtag Ramzan hashtag generator tool."
+    />
+    <meta
+      name="twitter:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/terms.html" />
+    <!-- CANONICAL URL -->
+    <link rel="canonical" href="https://hashtagss.netlify.app/terms.html" />
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            ramzan: "#22c55e",
-            r7dark: "#020617",
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              ramzan: "#22c55e",
+              r7dark: "#020617",
+            },
           },
         },
-      },
-    };
-  </script>
-</head>
+      };
+    </script>
+  </head>
 
   <body class="bg-r7dark text-slate-100">
-   
-
     <!-- NAVBAR (COMMON) -->
-<header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-      <!-- Left: Logo + text -->
-<a href="https://instagram.com/ramzan0043" target="_blank" 
-   class="flex items-center gap-3">
-
-  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-    R7
-  </div>
-
-  <div>
-    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
-  </div>
-
-</a>
-
-      <!-- Desktop nav -->
-<nav class="hidden md:flex items-center gap-4 text-[13px]">
-  <a href="index.html" class="hover:text-ramzan transition">Home</a>
-  <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
-  <a href="index.html#all" class="hover:text-ramzan transition">Hashtag Box</a>
-  <a href="about.html" class="hover:text-ramzan transition">About</a>
-  <a href="contact.html" class="hover:text-ramzan transition">Contact</a>
-  <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
-  <a href="privacy.html" class="hover:text-ramzan transition">Privacy</a>
-  <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
-  <a href="disclaimer.html" class="hover:text-ramzan transition">Disclaimer</a>
-  <a href="sitemap.html" class="hover:text-ramzan transition">Sitemap</a>
-</nav>
-
-    <!-- Mobile menu button -->
-    <button
-      id="menuToggle"
-      class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
-      aria-label="Menu"
+    <header
+      class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur"
     >
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round"
-              d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button>
-  </div>
+      <div
+        class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4"
+      >
+        <!-- Left: Logo + text -->
+        <a
+          href="https://instagram.com/ramzan0043"
+          target="_blank"
+          class="flex items-center gap-3"
+        >
+          <div
+            class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold"
+          >
+            R7
+          </div>
 
-  <!-- Mobile nav dropdown -->
-  <div
-    id="mobileMenu"
-    class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
-  >
-    <div class="flex flex-col gap-2">
-      <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
-      <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
-      <a href="about.html" class="py-1 text-slate-200">👤 About</a>
-      <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+          <div>
+            <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+          </div>
+        </a>
 
-      <div class="h-px bg-slate-800 my-1"></div>
-      <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
-      <a href="privacy.html" class="py-1 text-slate-300">🛡 Privacy Policy</a>
-      <a href="terms.html" class="py-1 text-slate-300">📜 Terms & Conditions</a>
-      <a href="disclaimer.html" class="py-1 text-slate-300">⚠ Disclaimer</a>
-      <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
-    </div>
-  </div>
-</header>
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex items-center gap-4 text-[13px]">
+          <a href="index.html" class="hover:text-ramzan transition">Home</a>
+          <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
+          <a href="index.html#all" class="hover:text-ramzan transition">
+            Hashtag Box
+          </a>
+          <a href="about.html" class="hover:text-ramzan transition">About</a>
+          <a href="contact.html" class="hover:text-ramzan transition">
+            Contact
+          </a>
+          <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
+          <a href="privacy.html" class="hover:text-ramzan transition">
+            Privacy
+          </a>
+          <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
+          <a href="disclaimer.html" class="hover:text-ramzan transition">
+            Disclaimer
+          </a>
+          <a href="sitemap.html" class="hover:text-ramzan transition">
+            Sitemap
+          </a>
+        </nav>
 
+        <!-- Mobile menu button -->
+        <button
+          id="menuToggle"
+          class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
+          aria-label="Menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile nav dropdown -->
+      <div
+        id="mobileMenu"
+        class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
+      >
+        <div class="flex flex-col gap-2">
+          <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
+          <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
+          <a href="index.html#all" class="py-1 text-slate-200">
+            #️⃣ Hashtag Box
+          </a>
+          <a href="about.html" class="py-1 text-slate-200">👤 About</a>
+          <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+
+          <div class="h-px bg-slate-800 my-1"></div>
+          <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
+          <a href="privacy.html" class="py-1 text-slate-300">
+            🛡 Privacy Policy
+          </a>
+          <a href="terms.html" class="py-1 text-slate-300">
+            📜 Terms &amp; Conditions
+          </a>
+          <a href="disclaimer.html" class="py-1 text-slate-300">
+            ⚠ Disclaimer
+          </a>
+          <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
+        </div>
+      </div>
+    </header>
 
     <!-- MAIN -->
-    <main class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8">
+    <main
+      class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8"
+    >
       <header class="space-y-2 border-b border-slate-800 pb-4">
         <p class="text-[11px] text-ramzan uppercase tracking-[0.25em]">
-          Terms & Conditions
+          Terms &amp; Conditions
         </p>
         <h1 class="text-2xl sm:text-3xl font-semibold">
           R7 Hub – Terms of Use
         </h1>
-        <p class="text-slate-400 text-[11px]">
-          Last updated: November 2025
-        </p>
+        <p class="text-slate-400 text-[11px]">Last updated: November 2025</p>
       </header>
 
       <section class="space-y-4">
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">1. Simple explanation</h2>
           <p class="text-slate-300">
-            Ye website ek personal project + learning space hai. Yaha jo content hai
-            (blog posts, notes, hashtag sets, etc.) sirf general information
+            Ye website ek personal project + learning space hai. Yaha jo content
+            hai (blog posts, notes, hashtag sets, etc.) sirf general information
             aur education ke liye hai.
           </p>
         </div>
@@ -146,9 +209,17 @@
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">2. Using the website</h2>
           <ul class="list-disc pl-4 text-slate-300 space-y-1">
-            <li>Is website ko tum free me use kar sakte ho, read kar sakte ho.</li>
-            <li>Content ko copy karke apne purpose ke liye use kar sakte ho (reels, captions, etc.), lekin misuse mat karo.</li>
-            <li>Website ko hack, spam, ya illegal kaam ke liye use nahi kar sakte.</li>
+            <li>
+              Is website ko tum free me use kar sakte ho, read kar sakte ho.
+            </li>
+            <li>
+              Content ko copy karke apne purpose ke liye use kar sakte ho
+              (reels, captions, etc.), lekin misuse mat karo.
+            </li>
+            <li>
+              Website ko hack, spam, ya illegal kaam ke liye use nahi kar
+              sakte.
+            </li>
           </ul>
         </div>
 
@@ -156,8 +227,8 @@
           <h2 class="text-lg font-semibold">3. No professional guarantee</h2>
           <p class="text-slate-300">
             Main lawyer, CA, ya financial advisor nahi hoon. Jo bhi tips / ideas
-            yaha likhe gaye hain woh personal experience + learning ke base pe hain.
-            Har decision apni responsibility se lo.
+            yaha likhe gaye hain woh personal experience + learning ke base pe
+            hain. Har decision apni responsibility se lo.
           </p>
         </div>
 
@@ -165,16 +236,16 @@
           <h2 class="text-lg font-semibold">4. Changes to content</h2>
           <p class="text-slate-300">
             Website ka content kabhi bhi update, remove, ya change ho sakta hai
-            bina notice ke. Ye pura space learning & experiment ke liye hai.
+            bina notice ke. Ye pura space learning &amp; experiment ke liye hai.
           </p>
         </div>
 
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">5. External links</h2>
           <p class="text-slate-300">
-            Kabhi-kabhi blog ya pages me external links (YouTube, GitHub, docs, etc.)
-            ho sakte hain. In websites ki safety, accuracy ya content ke liye main
-            responsible nahi hoon.
+            Kabhi-kabhi blog ya pages me external links (YouTube, GitHub, docs,
+            etc.) ho sakte hain. In websites ki safety, accuracy ya content ke
+            liye main responsible nahi hoon.
           </p>
         </div>
 
@@ -182,16 +253,18 @@
           <h2 class="text-lg font-semibold">6. Limitation of liability</h2>
           <p class="text-slate-300">
             Is website ko use karte waqt agar tumhe koi indirect loss, damage,
-            ya problem hoti hai (for example: wrong info follow karli, account ban ho gaya, etc.)
-            to uske liye main legally responsible nahi ho sakta.
+            ya problem hoti hai (for example: wrong info follow karli, account
+            ban ho gaya, etc.) to uske liye main legally responsible nahi ho
+            sakta.
           </p>
         </div>
 
         <div class="space-y-2">
           <h2 class="text-lg font-semibold">7. Updates to these terms</h2>
           <p class="text-slate-300">
-            Future me jab website grow karegi ya new features add honge,
-            main ye terms update kar sakta hoon. Updated version hamesha yahi page pe hoga.
+            Future me jab website grow karegi ya new features add honge, main ye
+            terms update kar sakta hoon. Updated version hamesha yahi page pe
+            hoga.
           </p>
         </div>
 
@@ -211,38 +284,37 @@
 
     <!-- FOOTER -->
     <footer class="border-t border-slate-800 py-4 mt-6">
-  <div class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2">
-    <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
-    <p class="space-x-2">
-      <a href="index.html" class="text-ramzan">Home</a> •
-      <a href="blog.html" class="text-ramzan">Blog</a> •
-      <a href="about.html" class="text-ramzan">About</a> •
-      <a href="privacy.html" class="text-ramzan">Privacy</a> •
-      <a href="terms.html" class="text-ramzan">Terms</a> •
-      <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
-      <a href="sitemap.html" class="text-ramzan">Sitemap</a>
-    </p>
-  </div>
-</footer>
+      <div
+        class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2"
+      >
+        <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
+        <p class="space-x-2">
+          <a href="index.html" class="text-ramzan">Home</a> •
+          <a href="blog.html" class="text-ramzan">Blog</a> •
+          <a href="about.html" class="text-ramzan">About</a> •
+          <a href="privacy.html" class="text-ramzan">Privacy</a> •
+          <a href="terms.html" class="text-ramzan">Terms</a> •
+          <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
+          <a href="sitemap.html" class="text-ramzan">Sitemap</a>
+        </p>
+      </div>
+    </footer>
 
-<script>
-  // Mobile menu toggle (COMMON)
-  const menuToggle = document.getElementById("menuToggle");
-  const mobileMenu = document.getElementById("mobileMenu");
-  if (menuToggle && mobileMenu) {
-    menuToggle.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-  }
+    <script>
+      // Mobile menu toggle (COMMON)
+      const menuToggle = document.getElementById("menuToggle");
+      const mobileMenu = document.getElementById("mobileMenu");
+      if (menuToggle && mobileMenu) {
+        menuToggle.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
+      }
 
-  // Year (agar span id="year" use kar rahe ho to)
-  const yearSpan = document.getElementById("year");
-  if (yearSpan) {
-    yearSpan.textContent = new Date().getFullYear();
-  }
-</script>
-
+      // Year
+      const yearSpan = document.getElementById("year");
+      if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+      }
+    </script>
   </body>
 </html>
-
-
