--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <!-- Google Verification -->
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+  <link rel="icon" type="image/jpeg" href="logo.jpeg" />
+
 
   <!-- MAIN TITLE -->
   <title>Sitemap • R7 Hub | All Pages – Hashtag Ramzan Free Hashtag Generator</title>
@@ -2136,5 +2138,6 @@
     </script>
   </body>
 </html>
+
 
 
