--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWMJ9E9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3RZEWMJ9E9');
+</script>
+
+
   <!-- Google Verification -->
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
   <link rel="icon" type="image/jpeg" href="logo.jpeg" />
@@ -2138,6 +2149,7 @@
     </script>
   </body>
 </html>
+
 
 
 
