--- a/about.html
+++ b/about.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWMJ9E9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3RZEWMJ9E9');
+</script>
+
+
     <!-- Google Verification -->
     <meta
       name="google-site-verification"
@@ -480,3 +492,4 @@
     </script>
   </body>
 </html>
+
