--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWMJ9E9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3RZEWMJ9E9');
+</script>
+
 
     <!-- Google Verification -->
     <meta
@@ -335,3 +345,4 @@
     </script>
   </body>
 </html>
+
