--- a/home.html
+++ b/home.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWMJ9E9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3RZEWMJ9E9');
+  gtag('config', 'G-3RZEWEMJE9');
 </script>
+
 
   <!-- Google Verification -->
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
@@ -292,4 +293,5 @@
   </script>
 </body>
 </html>
+
 
