--- a/terms.html
+++ b/terms.html
@@ -17,47 +17,43 @@
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
   <!-- MAIN TITLE -->
-  <title>Terms &amp; Conditions • Hashtag | Free Hashtag Generator India</title>
+  <title>Hashtag • Free Hashtags Generator for Instagram, Facebook, Twitter & TikTok</title>
 
   <!-- MAIN SEO -->
   <meta
     name="description"
-    content="Read the Terms and Conditions for using Hashtag — a free Instagram hashtag generator for reels, posts, shorts and stories. Learn acceptable use, limitations and legal details for Indian creators."
+    content="Hashtag – Free trending hashtags generator for Instagram, Facebook, Twitter, YouTube & TikTok. Generate viral hashtags for reels, posts, shorts and stories instantly."
   />
+
   <meta
     name="keywords"
-    content="terms and conditions, hashtag terms, hashtag generator terms, legal information, instagram hashtag tool terms"
+    content="hashtags, free hashtag generator, instagram hashtags, facebook hashtags, twitter hashtags, tiktok hashtags, trending hashtags, reels hashtags"
   />
+
   <meta name="author" content="Hashtag" />
 
   <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Terms &amp; Conditions • Hashtag" />
+  <meta property="og:title" content="Hashtag • Free Trending Hashtag Generator" />
   <meta
     property="og:description"
-    content="Terms and conditions for using the Hashtag free Instagram hashtag generator."
+    content="Create trending hashtags for Instagram, Facebook, Twitter & TikTok with the free Hashtag generator tool."
   />
-  <meta
-    property="og:image"
-    content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-  />
-  <meta property="og:url" content="https://hashtagss.netlify.app/terms.html" />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Hashtag" />
 
-  <!-- TWITTER CARD -->
+  <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Terms &amp; Conditions • Hashtag" />
+  <meta name="twitter:title" content="Hashtag • Free Hashtags Generator" />
   <meta
     name="twitter:description"
-    content="Terms for users of the Hashtag free hashtag generator tool."
+    content="Free trending hashtags generator for reels, stories, shorts & posts."
   />
-  <meta
-    name="twitter:image"
-    content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/terms.html" />
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/" />
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -74,6 +70,7 @@
     };
   </script>
 </head>
+
 
 
   <body class="bg-r7dark text-slate-100">
@@ -314,6 +311,7 @@
     </script>
   </body>
 </html>
+
 
 
 
