--- a/home.html
+++ b/home.html
@@ -5,43 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
   <!-- Google Verification -->
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
   <!-- MAIN TITLE -->
-  <title>Home • R7 Hub | Free Hashtag Generator for Instagram Reels, Posts & Shorts India</title>
+  <title>Hashtag • Free Hashtags Generator for Instagram, Facebook, Twitter & TikTok</title>
 
   <!-- MAIN SEO -->
-  <meta name="description" content="Welcome to R7 Hub • Hashtag Ramzan. Use our free hashtag generator to find trending Indian hashtags for Instagram reels, posts, stories, YouTube Shorts and TikTok. Simple, fast and made for Indian creators who want more reach and views.">
-  <meta name="keywords" content="home, R7 Hub, hashtag ramzan, free hashtag generator, instagram reels tags, india hashtags, creator growth tool" />
-  <meta name="author" content="Ramzan Ahmad" />
+  <meta
+    name="description"
+    content="Hashtag – Free trending hashtags generator for Instagram, Facebook, Twitter, YouTube & TikTok. Generate viral hashtags for reels, posts, shorts and stories instantly."
+  />
+
+  <meta
+    name="keywords"
+    content="hashtags, free hashtag generator, instagram hashtags, facebook hashtags, twitter hashtags, tiktok hashtags, trending hashtags, reels hashtags"
+  />
+
+  <meta name="author" content="Hashtag" />
 
   <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Home • R7 Hub | Free Hashtag Generator India" />
-  <meta property="og:description" content="Start using the free R7 Hub hashtag generator for Instagram reels and posts. Designed for Indian creators." />
-  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/home.html" />
+  <meta property="og:title" content="Hashtag • Free Trending Hashtag Generator" />
+  <meta
+    property="og:description"
+    content="Create trending hashtags for Instagram, Facebook, Twitter & TikTok with the free Hashtag generator tool."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+  <meta property="og:site_name" content="Hashtag" />
 
-  <!-- TWITTER CARD -->
+  <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Home • R7 Hub | Free Hashtag Generator India" />
-  <meta name="twitter:description" content="Free Instagram hashtags generator for Indian creators by Hashtag Ramzan." />
-  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta name="twitter:title" content="Hashtag • Free Hashtags Generator" />
+  <meta
+    name="twitter:description"
+    content="Free trending hashtags generator for reels, stories, shorts & posts."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/home.html" />
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/" />
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -58,6 +70,7 @@
     };
   </script>
 </head>
+
 
 <body class="bg-r7dark text-slate-100">
   <!-- NAVBAR (COMMON) -->
@@ -293,5 +306,6 @@
   </script>
 </body>
 </html>
+
 
 
