--- a/about.html
+++ b/about.html
@@ -1,97 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
+  <!-- TITLE -->
+  <title>About • Hashtag | Free Trending Hashtag Generator</title>
 
+  <!-- DESCRIPTION -->
+  <meta
+    name="description"
+    content="About Hashtag – India’s free trending hashtag generator for Instagram, Facebook, Twitter, TikTok & YouTube. Learn how Hashtag helps creators grow."
+  />
 
-    <!-- Google Verification -->
-    <meta
-      name="google-site-verification"
-      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
-    />
+  <!-- KEYWORDS -->
+  <meta
+    name="keywords"
+    content="about hashtag, hashtag generator, who created hashtag, instagram hashtags tool, trending hashtags"
+  />
 
-    <!-- MAIN TITLE -->
-    <title>
-      About R7 Hub • Hashtag Ramzan | Free Instagram Hashtag Generator for Indian
-      Creators
-    </title>
+  <meta name="author" content="Hashtag" />
 
-    <!-- MAIN SEO -->
-    <meta
-      name="description"
-      content="Know the story behind R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator created by Ramzan Ahmad for Indian students, creators and influencers who want to grow with the right reels and posts hashtags. Learn why this tool was built and how it helps creators every day."
-    />
-    <meta
-      name="keywords"
-      content="about R7 Hub, about Hashtag Ramzan, Ramzan Ahmad, instagram hashtag generator story, indian creator tools"
-    />
-    <meta name="author" content="Ramzan Ahmad" />
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="About • Hashtag" />
+  <meta
+    property="og:description"
+    content="Learn about Hashtag – a free generator for trending Instagram hashtags."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/about.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Hashtag" />
 
-    <!-- OPEN GRAPH -->
-    <meta
-      property="og:title"
-      content="About R7 Hub • Hashtag Ramzan | Free Hashtag Generator Story"
-    />
-    <meta
-      property="og:description"
-      content="Read about R7 Hub • Hashtag Ramzan and how this free hashtag generator helps Indian creators grow on Instagram."
-    />
-    <meta
-      property="og:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-    <meta
-      property="og:url"
-      content="https://hashtagss.netlify.app/about.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About Hashtag" />
+  <meta
+    name="twitter:description"
+    content="Learn how the Hashtag generator helps creators get trending hashtags."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-    <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="About R7 Hub • Hashtag Ramzan"
-    />
-    <meta
-      name="twitter:description"
-      content="Story of R7 Hub and Hashtag Ramzan, a free Instagram hashtag generator from India."
-    />
-    <meta
-      name="twitter:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/about.html" />
 
-    <!-- CANONICAL URL -->
-    <link rel="canonical" href="https://hashtagss.netlify.app/about.html" />
-
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
@@ -492,5 +471,6 @@
     </script>
   </body>
 </html>
+
 
 
