--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,96 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
+  <!-- MAIN TITLE -->
+  <title>Disclaimer • Hashtag | Free Trending Hashtag Generator India</title>
 
-    <!-- Google Verification -->
-    <meta
-      name="google-site-verification"
-      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
-    />
+  <!-- MAIN SEO -->
+  <meta
+    name="description"
+    content="Disclaimer for Hashtag — a free trending hashtag generator for Instagram, Facebook, Twitter, TikTok & YouTube. Learn about usage limits, accuracy, and responsibility before using this tool."
+  />
+  <meta
+    name="keywords"
+    content="disclaimer hashtag, hashtag generator disclaimer, instagram hashtags disclaimer, trending hashtags disclaimer"
+  />
+  <meta name="author" content="Hashtag" />
 
-    <!-- MAIN TITLE -->
-    <title>Disclaimer • R7 Hub | Hashtag Ramzan – Free Hashtag Generator</title>
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Disclaimer • Hashtag" />
+  <meta
+    property="og:description"
+    content="Official disclaimer for using the Hashtag free trending hashtags generator."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/disclaimer.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Hashtag" />
 
-    <!-- MAIN SEO -->
-    <meta
-      name="description"
-      content="Disclaimer for R7 Hub • Hashtag Ramzan, a free Instagram hashtag generator for Indian creators. Learn about content accuracy, responsibility and limitations of using this hashtag tool for reels and posts."
-    />
-    <meta
-      name="keywords"
-      content="disclaimer, R7 Hub disclaimer, hashtag ramzan disclaimer, instagram hashtag tool disclaimer"
-    />
-    <meta name="author" content="Ramzan Ahmad" />
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Disclaimer • Hashtag" />
+  <meta
+    name="twitter:description"
+    content="Disclaimer for creators using the Hashtag trending hashtag generator tool."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-    <!-- OPEN GRAPH -->
-    <meta
-      property="og:title"
-      content="Disclaimer • R7 Hub | Hashtag Ramzan"
-    />
-    <meta
-      property="og:description"
-      content="Official disclaimer for the R7 Hub free Instagram hashtag generator tool."
-    />
-    <meta
-      property="og:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-    <meta
-      property="og:url"
-      content="https://hashtagss.netlify.app/disclaimer.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/disclaimer.html" />
 
-    <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Disclaimer • R7 Hub | Hashtag Ramzan"
-    />
-    <meta
-      name="twitter:description"
-      content="Disclaimer page for the R7 Hub • Hashtag Ramzan hashtag generator."
-    />
-    <meta
-      name="twitter:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-
-    <!-- CANONICAL URL -->
-    <link
-      rel="canonical"
-      href="https://hashtagss.netlify.app/disclaimer.html"
-    />
-
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
@@ -312,5 +287,6 @@
     </script>
   </body>
 </html>
+
 
 
